<resources>
    <string name="app_name">Blood Bank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">الجوال</string>
    <string name="E_mail">البريد الالكترونى</string>
    <string name="get_blood_type">فصيلة الدم</string>
    <string name="get_government">المحافظه</string>
    <string name="get_cityt">المدينه</string>
    <string name="massage_title">عنوان الرساله:</string>
    <string name="massage_content">نص الرساله :</string>
    <string name="send">ارسال</string>
    <string name="notification">تنبيه بخصوص طلبك</string>
    <string name="name">الاسم</string>
    <string name="notes">ملاحظات:</string>
    <string name="age">العمر</string>
    <string name="mount">عدد الاكياس</string>
    <string name="اغلاق" />
    <string name="cancel">اغلاق</string>

</resources>
